K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector: 
    app: platformservice
  ports:  
    - name: platformservice
      protocol: TCP
      port: 80 # Node port connected to below (another port is used to call this one from the outside)
      targetPort: 8080 # port exposed in Docker
